--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_layout.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_layout.scss
@@ -98,7 +98,7 @@
 
 .dropdown-container {
 	position: relative;
-	.dropdown-toggle {
+	.dropdown-toggle, .menu-trigger {
 		cursor: pointer;
 	}
 	.pointer {
