--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_header.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_header.scss
@@ -526,7 +526,7 @@ a:hover .badge {
 		@include sizing(44px, 44px);
 		line-height: 44px;
 		font-size: rem(20px);
-		@include position($type: absolute ,$right: 0, $top: 0, $bottom: 0, $z: 10);
+		@include position($type: absolute, $right: 0, $top: 0, $bottom: 0, $z: 10);
 		margin: auto;
 		text-align: center;
 		cursor: pointer;
@@ -555,7 +555,7 @@ a:hover .badge {
 	}
 	.dropdown-container {
 		.fa-chevron-down {
-			display: none;
+			//display: none;
 		}
 		.fa-chevron-right {
 			@include transition(all 0.5s ease-in-out);
