Change ids to classes and fixed nav header css

--- a/khyeras/_dev/styles/khyeras_v1/template/custom/header_featured.html
+++ b/khyeras/_dev/styles/khyeras_v1/template/custom/header_featured.html
@@ -8,7 +8,7 @@
 		<div class="flex-row flex-row-05">
 			<div class="flex-column featured-mvp">
 				<a href="//google.com">
-					<div class="featured-content">
+					<div class="featured-details">
 						<div class="image-wrap">
 							<img src="{T_THEME_PATH}/images/featured-mvp.jpg" alt="MVP" />
 						</div>
@@ -18,7 +18,7 @@
 			</div>
 			<div class="flex-column featured-story">
 				<a href="//google.com">
-					<div class="featured-content">
+					<div class="featured-details">
 						<div class="image-wrap">
 							<img src="{T_THEME_PATH}/images/featured-story.jpg" alt="Story" />
 						</div>
@@ -28,7 +28,7 @@
 			</div>
 			<div class="flex-column featured-lore">
 				<a href="//google.com">
-					<div class="featured-content">
+					<div class="featured-details">
 						<div class="image-wrap">
 							<img src="{T_THEME_PATH}/images/featured-lore.jpg" alt="Lore" />
 						</div>
@@ -38,7 +38,7 @@
 			</div>
 			<div class="flex-column featured-event">
 				<a href="//google.com">
-					<div class="featured-content">
+					<div class="featured-details">
 						<div class="image-wrap">
 							<img src="{T_THEME_PATH}/images/featured-event.jpg" alt="Event" />
 						</div>
