--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_header.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_header.scss
@@ -91,7 +91,10 @@
 	}
 }
 
-/* Header - Nav top
+// Setting the variable here to use multiple transitions
+$transform: color 0.3s ease-in-out, transform 0.8s ease-in-out;
+
+/* Header - Nav Menu
 ========================================================================== */
 
 .navbar {
@@ -103,67 +106,73 @@
 	.wrapper {
 		@include flex-flow(row wrap);
 		align-items: center;
-		a {
-			color: $color-01;
+	}
+	a {
+		color: $color-01;
+	}
+	a, .icon.fa-chevron-down {
+		&:hover {
+			color: $color-06;
 		}
-		a, .icon.fa-chevron-down {
-			&:hover {
-				color: $color-06;
-			}
+	}
+	.site-logo-text {
+		font-family: $font-03;
+		font-size: rem(30px);
+		line-height: 1;
+		@include sizing(0, 0);
+		overflow: hidden;
+		@include toggle-content(hide, $transition: true);
+	}
+	.menu {
+		margin: 0 -10px;
+		& > li {
+			padding: 0 10px;
+			@include inline-block(middle);
 		}
-		.site-logo-text {
-			font-family: $font-03;
-			font-size: rem(30px);
-			line-height: 1;
-			@include sizing(0, 0);
-			overflow: hidden;
-			@include toggle-content(hide, $transition: true);
-		}
-		.menu {
-			margin: 0 -10px;
-			& > li {
-				padding: 0 10px;
-				@include inline-block(middle);
+		.menu-label {
+			.fa-chevron-down {
+				@include transition($transform);
+				transform: rotate(0deg);
+				@include sizing(20px, 20px);
+				margin: 0 0 0 10px;
 			}
-			.menu-label {
-				.icon {
-					@include sizing(20px, 20px);
-					margin: 0 0 0 10px;
-				}
-				.fa-chevron-down {
-					// Setting the variable here to use multiple transitions
-					$transform: color 0.3s ease-in-out, transform 0.8s ease-in-out;
-					@include transition($transform);
-					transform: rotate(0deg);
-				}
-			}
-			.dropdown-visible .menu-label .fa-chevron-down {
-				transform: rotate(180deg);
+			.mobile-menu-trigger {
+				display: none;
 			}
 		}
 		.dropdown {
 			top: 34px;
-			&.notification_list {
-				top: 35px;
-			}
 			.dropdown-contents {
+				padding: 0;
 				font-size: rem($global-font-size);
 			}
 		}
-		.user-menu {
-			margin: 0 -10px 0 auto;
-			.user-info .dropdown {
-				@include position($top: 40px, $right: 0, $left: auto);
-			}
+		.dropdown-visible .menu-label .fa-chevron-down {
+			transform: rotate(180deg);
+		}
+		#notification_list {
+			top: 35px;
+		}
+	}
+	.user-menu {
+		margin: 1px -10px 0 auto;
+		.dropdown {
+			@include position($right: 0, $left: auto);
+		}
+		.logged-in-info .dropdown {
+			top: 40px;
 		}
 	}
 	&.sticky {
 		background: rgba($color-05, 1.0);
-		.wrapper .site-logo-text {
+		.site-logo-text {
 			margin: 0 20px 0 0;
 			@include toggle-content(show);
 			overflow: visible;
 			@include sizing(auto, auto);
+		}
+		.user-menu .logged-in-info .user-name {
+			max-width: 210px;
 		}
 	}
 }
@@ -178,6 +187,14 @@
 	}
 }
 
+/* Header - Nav Menu - Search Box
+========================================================================== */
+
+.navbar .menu .search-box {
+	min-width: 400px;
+	@include position($left: -150%);
+}
+
 /* Header - User Menu
 ========================================================================== */
 
@@ -189,14 +206,26 @@
 	.user-name, .user-avatar {
 		@include inline-block(middle);
 	}
+	.user-avatar {
+		margin: 0 0 0 10px;
+		.image-wrap {
+			border-radius: 100%;
+		}
+	}
+	.logged-in-info .user-name {
+		max-width: 285px;
+		@include ellipsis;
+	}
+	.guest-info a {
+		color: $color-06;
+		&:hover {
+			color: $color-01;
+		}
+	}
 	.dropdown-container .dropdown-contents .linked-account-title {
 		margin: 7px 0 0 0;
 		padding: 10px 0 3px 0;
 		border-top: 1px dashed $color-04;
-	}
-	.user-info .user-name {
-		max-width: 285px;
-		@include ellipsis;
 	}
 	.linked-account {
 		.image-wrap, .username-coloured {
@@ -208,20 +237,6 @@
 			margin: 0 5px 0 0;
 		}
 	}
-	.user-avatar {
-		margin: 0 0 0 10px;
-		.image-wrap {
-			border-radius: 100%;
-		}
-	}
-}
-
-/* Header - Nav top - Search Box
-========================================================================== */
-
-.navbar .wrapper > ul > li.dropdown-container .search-box {
-	min-width: 400px;
-	@include position($left: -150%);
 }
 
 /* Notifications
@@ -230,9 +245,7 @@
 
 #notification_list {
 	min-width: 450px;
-	&, .dropdown-contents {
-		padding: 0;
-	}
+	padding: 0;
 	.header, .footer, ul li {
 		padding: 10px 20px;
 	}
@@ -291,7 +304,6 @@
 				}
 			}
 			.icon-mark {
-				display: block;
 				@include position($type: absolute, $top: 10px, $right: 20px, $z: 2);
 				.icon {
 					width: auto;
@@ -375,21 +387,21 @@
 ========================================================================== */
 
 .badge {
-	display: inline-block;
+	@include inline-block(top);
 	@include sizing(20px, 20px);
-	line-height: 21px;
+	line-height: 20px;
 	background-color: $color-11;
 	border-radius: 100%;
 	text-align: center;
 	font-weight: normal;
-	font-size: rem(11px);
+	font-size: rem(10px);
 	margin: 0 0 0 10px;
-	.fa-plus {
-		font-size: rem(10px);
+	&.badge-plus {
+		font-size: rem(20px);
 	}
 }
 
-a:hover .badge {
+.badge, a:hover .badge {
 	color: $color-01;
 }
 
@@ -458,40 +470,25 @@ a:hover .badge {
 
 .mobile-menu-button {
 	cursor: pointer;
-	padding: 0 20px;
-	.mobile-menu-icon, .mobile-menu-text {
-		@include inline-block(middle);
+	margin: 0 -10px;
+	.button-section, .rpg-icon, .mobile-menu-label {
+		vertical-align: middle;
+	}
+	.button-section, .mobile-menu-label {
+		display: inline-block;
+	}
+	.button-section {
+		padding: 0 10px;
 	}
 	.mobile-menu-text {
-		font-size: rem(16px);
-	}
-	.mobile-menu-icon {
-		@include sizing(25px, 20px);
-		margin: 0 5px 0 0;
 		position: relative;
-		.lines {
-			position: relative;
-			display: block;
-			@include sizing(100%, 100%);
-			.line, &:before, &:after {
-				display: block;
-				@include sizing(100%, 4px);
-				background: $color-01;
-				@include position($type: absolute, $left: 0);
-			}
-			&:before, &:after {
-				content: '';
-			}
-			.line {
-				top: 0;
-			}
-			&:before {
-				top: 8px;
-			}
-			&:after {
-				top: 16px;
-			}
-		}
+		top: 2px;
+	}
+	.badge {
+		margin: 0;
+	}
+	.rpg-icon {
+		font-size: rem(25px);
 	}
 }
 
@@ -505,23 +502,26 @@ a:hover .badge {
 		left: 0;
 		box-shadow: 7px 0 5px -2px rgba($color-02, 0.35);
 	}
-	ul {
-		&, & li {
-			margin: 0;
-			padding: 0;
-		}
-		li {
-			border: 0;
-			font-size: rem(16px);
-		}
-	}
 	a {
 		color: $color-01;
 	}
-	.guest-info a {
-		color: $color-06;
+	&, ul {
+		font-size: rem(16px);
 	}
-	.mobile-menu-header .fa-times, .dropdown-container .fa-chevron-right  {
+	ul, .user-menu .dropdown-container .dropdown-contents .linked-account-title {
+		margin: 0;
+	}
+	.mobile-menu-header, .menu .menu-label {
+		position: relative;
+	}
+	.mobile-menu-header, .menu .menu-label, .menu .dropdown-contents li, .menu .dropdown-contents > div {
+		padding: 10px;
+	}
+	.menu .menu-label, .menu .dropdown-contents li, .menu .dropdown-contents > div {
+		border-top: 1px solid mix($color-01, $color-04, 05%);
+		border-bottom: 1px solid mix($color-02, $color-04, 25%);
+	}
+	.mobile-menu-header .fa-times, .menu .menu-label .fa-chevron-down {
 		@include sizing(44px, 44px);
 		line-height: 44px;
 		font-size: rem(20px);
@@ -531,87 +531,83 @@ a:hover .badge {
 		cursor: pointer;
 	}
 	.mobile-menu-header {
-		position: relative;
 		border-bottom: 1px solid mix($color-02, $color-04, 25%);
-		padding: 10px 10px 10px 10px;
 		.mobile-header {
 			font-size: rem(24px);
 			@include spectral-common;
 		}
 	}
-	ul li > a:first-child, .dropdown.search-box .dropdown-contents,
-	#notification_list .header,	#notification_list .footer,
-	.linked-account-title strong, .guest-info {
-		border-top: 1px solid mix($color-01, $color-04, 05%);
-		border-bottom: 1px solid mix($color-02, $color-04, 25%);
-		padding: 10px;
-	}
-	ul li > a:first-child, .linked-account-title strong {
-		display: block;
-	}
 	.mobile-menu-content {
 		border-bottom: 1px solid mix($color-01, $color-04, 05%);
 	}
-	.dropdown-container {
-		.fa-chevron-down {
-			//display: none;
-		}
-		.fa-chevron-right {
-			@include transition(all 0.5s ease-in-out);
-		}
-	}
-	.dropdown {
-		@include sizing(0, 0);
-		min-width: 0;
-		margin-left: -($mobile-menu-width) !important;
-		padding: 0;
-		border: 0;
-		background: none;
-		@include transition(margin-left 0.5s ease-in-out);
-		position: static;
-		.dropdown-contents {
-			max-height: none;
-			overflow: visible;
-		}
-		&.search-box .dropdown-contents {
-			padding: 20px 10px;
-		}
-	}
-	.dropdown-open {
-		& > a {
-			font-weight: bold;
-			background: mix($color-02, $color-04, 15%);
-		}
-		.fa-chevron-right {
-			transform: rotate(-180deg);
+	.menu {
+		.menu-label .fa-chevron-down {
+			@include transition($transform);
+			&:before {
+				content: unicode($icon-chevron-right);
+			}
 		}
 		.dropdown {
-			@include sizing(auto, auto);
-			margin-left: 0 !important;
-			visibility: visible;
-			opacity: 1;
+			display: block;
+			@include sizing(0, 0);
+			min-width: 0;
+			margin-left: -($mobile-menu-width) !important;
+			border: 0;
+			background: none;
+			@include transition(margin-left 0.5s ease-in-out);
+			position: static;
+			&, .dropdown-contents {
+				padding: 0;
+			}
+			.dropdown-contents {
+				max-height: none;
+				overflow: visible;
+			}
 		}
-	}
-	.dropdown-close {
-		display: none;
+		.search-box .dropdown-contents form {
+			margin: 10px 0;
+		}
+		.dropdown-visible {
+			.menu-label {
+				font-weight: bold;
+				background: mix($color-02, $color-04, 15%);
+				.fa-chevron-down {
+					transform: rotate(-180deg);
+				}
+			}
+			.dropdown {
+				@include sizing(auto, auto);
+				margin-left: 0 !important;
+				visibility: visible;
+				opacity: 1;
+			}
+		}
+		.dropdown-not-visible {
+			display: none;
+		}
 	}
 	.user-menu {
-		.user-info .user-name {
+		.logged-in-info .user-name {
 			max-width: 190px;
 		}
-		.guest-info .user-name {
-			max-width: 234px;
-		}
-		.user-avatar {
-			vertical-align: top;
+		.guest-info {
+			a {
+				color: $color-06;
+			}
+			.user-name {
+				max-width: 234px;
+			}
 		}
 	}
 	#notification_list {
+		.header .header_settings, ul li {
+			font-size: rem(14px);
+		}
 		.header {
 			font-size: 0;
 			.header_settings {
 				position: static;
-				font-size: rem(16px);
+				font-size: rem(14px);
 			}
 		}
 		.footer {
@@ -620,13 +616,8 @@ a:hover .badge {
 		ul {
 			max-height: none;
 			overflow: visible;
-			li {
-				.notification-block .notification_text {
-					font-size: rem(14px);
-				}
-				.icon-mark {
-					right: 10px;
-				}
+			li .icon-mark {
+				right: 10px;
 			}
 		}
 	}
