--- a/khyeras/styles/khyeras_v1/template/custom/header_welcome.html
+++ b/khyeras/styles/khyeras_v1/template/custom/header_welcome.html
@@ -4,8 +4,15 @@
 			<div class="inner">
 				<div class="flex-row flex-row-10">
 					<div class="user-profile flex-column">
-						{$DISPLAY_AVATAR}
-						{$DISPLAY_USERNAME}
+						{{ display_avatar }}
+						<!-- IF S_REGISTERED_USER -->
+							<!-- EVENT navbar_header_user_profile_prepend -->
+							<!-- EVENT navbar_header_username_prepend -->
+							<h5 class="welcome-header">Welcome, <a href="{U_USER_PROFILE}" title="{L_READ_PROFILE}">{CURRENT_USERNAME_SIMPLE}</a>.</h5>
+							<!-- EVENT navbar_header_username_append -->
+						<!-- ELSE -->
+							<h5 class="welcome-header">Welcome, <a href="{U_REGISTER}" class="guest-name" title="{L_REGISTER}">{L_GUEST}</a>.</h5>
+						<!-- ENDIF -->
 						<!-- IF KHY_GROUP_NAME == 'Characters' -->
 							<p class="level">
 								Level 01
@@ -19,27 +26,46 @@
 							</p>
 						<!-- ELSEIF S_REGISTERED_USER -->
 							<p>
-								Don't forget to check out the latest <a href="{BOARD_URL}/viewforum.php?f=9">announcements</a> and <a href="{BOARD_URL}/viewforum.php?f=26">events</a>. Or, perhaps you're looking to add a new character? If so, don't forget to <a href="//www.google.com">link the account</a>.
+								Don't forget to check out the latest <a href="{BOARD_URL}/viewforum.php?f=9">announcements</a> and <a href="{BOARD_URL}/viewforum.php?f=26">events</a>. Or, perhaps you're looking to add a new character? If so, don't forget to <a href="{BOARD_URL}/ucp.php?i=-flerex-linkedaccounts-ucp-main_module&mode=management">link the account</a>.
 							</p>
 						<!-- ELSE -->
 							<p>
 								Looks like you're not registered. Check out our boards, <a href="{BOARD_URL}">read more on Khy'eras</a>, or <a href="{U_REGISTER}">sign up today</a>.
 							</p>
 						<!-- ENDIF -->
-						{$DISPLAY_TIME}
 					</div>
 					<div class="user-information flex-column">
-						{$DISPLAY_TIME}
-						<!-- INCLUDE custom/header_buttons.html -->
+						{{ display_time }}
+						<div class="toggle-buttons">
+							<div class="flex-row flex-row-10">
+								<div class="toggle toggle-links flex-column">
+									<a class="button">
+										<i class="icon rpg-icon rpg-hunting-horn" aria-hidden="true"></i><span>News</span>
+									</a>
+								</div>
+								<!-- IF SCRIPT_NAME == 'index' -->
+									<div class="toggle toggle-featured flex-column">
+										<a class="button">
+											<i class="icon rpg-icon rpg-stars-stack" aria-hidden="true"></i><span>Featured</span>
+										</a>
+									</div>
+								<!-- ENDIF -->
+							</div>
+						</div>
+						<!-- INCLUDE custom/header_links.html -->
 						<!-- IF S_REGISTERED_USER -->
 							<!-- EVENT navbar_header_user_profile_append -->
 						<!-- ELSE -->
 							<!-- EVENT navbar_header_logged_out_content -->
 						<!-- ENDIF -->
 					</div>
-					<div class="site-callouts flex-column">
-						<p class="introduction">Freed from Bhelest's nightmares and undead legions, the realm of Khy'eras – called "The Neverend" – unveiled vast reaches perfect for exploration. Create a character, craft unlimited adventures, and unlock the land's secrets. <a class="read-more" href="{BOARD_URL}">Read more...</a></p>
-						<!-- INCLUDE custom/header_links.html -->
+					<div class="site-details flex-column">
+						<p class="introduction">
+							Freed from Bhelest's nightmares and undead legions, the realm of Khy'eras - called "The Neverend" - unveiled vast reaches perfect for exploration. Create a character, craft unlimited adventures, and unlock the land's secrets. <a class="read-more" href="{ROOT_PATH}history">Read more...</a>
+						</p>
+						<p>
+							The current year is <span class="year">448</span> and the season is fall. <a href="{ROOT_PATH}timeline" class="read-more">Check here for Khy'eras' timeline.</a>
+						</p>
 					</div>
 				</div>
 			</div>
